use test only in offline mode and use live-reload on offline

--- a/test/index.html
+++ b/test/index.html
@@ -45,6 +45,7 @@
     ];
     */
   var specs = [
+  'application'
   ];
   for (var i = 0, l = specs.length; i < l; i++) {
     specs[i] = specs[i] + '_spec';
